--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Tag & Push image
         run: |
           DH_IMAGE=rblaine/$IMAGE_NAME
-          GH_IMAGE=ghcr.io/${{ github.repository }}/$IMAGE_NAME
+          GH_IMAGE=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
           Q_IMAGE=quay.io/rblaine95/$IMAGE_NAME
 
           # Change all uppercase to lowercase
