--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/vim,osx,code,linux,windows,sublimetext,intellij+all,visualstudio,visualstudiocode
-# Edit at https://www.toptal.com/developers/gitignore?templates=vim,osx,code,linux,windows,sublimetext,intellij+all,visualstudio,visualstudiocode
+# Created by https://www.toptal.com/developers/gitignore/api/osx,vim,code,linux,windows,sublimetext,intellij+all,visualstudio,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=osx,vim,code,linux,windows,sublimetext,intellij+all,visualstudio,visualstudiocode
 
 ### Code ###
 .vscode/*
@@ -252,6 +252,7 @@ mono_crash.*
 [Rr]eleases/
 x64/
 x86/
+[Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
@@ -289,6 +290,9 @@ BenchmarkDotNet.Artifacts/
 project.lock.json
 project.fragment.lock.json
 artifacts/
+
+# ASP.NET Scaffolding
+ScaffoldingReadMe.txt
 
 # StyleCop
 StyleCopReport.xml
@@ -580,4 +584,11 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
-# End of https://www.toptal.com/developers/gitignore/api/vim,osx,code,linux,windows,sublimetext,intellij+all,visualstudio,visualstudiocode
+# Fody - auto-generated XML schema
+FodyWeavers.xsd
+
+### VisualStudio Patch ###
+# Additional files built by Visual Studio
+*.tlog
+
+# End of https://www.toptal.com/developers/gitignore/api/osx,vim,code,linux,windows,sublimetext,intellij+all,visualstudio,visualstudiocode
