--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,9 +4,11 @@ on: [workflow_dispatch, push]
 
 env:
   IMAGE_NAME: monero
+  PLATFORMS: linux/amd64,linux/arm64/v8,linux/arm/v7
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.3.4
@@ -16,29 +18,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
-      - name: Login to Quay
-        uses: docker/login-action@v1.10.0
-        with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}
-      - name: Login to Dockerhub
-        uses: docker/login-action@v1.10.0
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1.2.0
+      - name: Install Buildx
+        uses: docker/setup-buildx-action@v1.6.0
       - name: Build image
         run: |
-          docker build \
-            --tag $IMAGE_NAME \
-            --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
-            .
-      - name: Tag & Push image
-        run: |
-          DH_IMAGE=${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME
-          GH_IMAGE=ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME
-          Q_IMAGE=quay.io/rblaine95/$IMAGE_NAME
-
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
 
@@ -48,15 +33,9 @@ jobs:
           # Use Docker `latest` tag convention
           [ "$VERSION" == "master" ] && VERSION=latest
 
-          echo Dockerhub=$DH_IMAGE
-          echo Github=$GH_IMAGE
-          echo Quay=$Q_IMAGE
-          echo VERSION=$VERSION
-
-          docker tag $IMAGE_NAME $DH_IMAGE:$VERSION
-          docker tag $IMAGE_NAME $GH_IMAGE:$VERSION
-          docker tag $IMAGE_NAME $Q_IMAGE:$VERSION
-
-          docker push $DH_IMAGE:$VERSION
-          docker push $GH_IMAGE:$VERSION
-          docker push $Q_IMAGE:$VERSION
+          docker buildx build \
+            --platform $PLATFORMS \
+            --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$VERSION \
+            --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
+            --push \
+            .
