--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,12 +4,18 @@ on: [workflow_dispatch, push]
 
 env:
   IMAGE_NAME: monero
-  PLATFORMS: linux/amd64,linux/arm64/v8,linux/arm/v7
+  PLATFORMS: amd64 arm64/v8 arm/v7
 
 jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - platform: amd64
+          - platform: arm64/v8
+          - platform: arm/v7
     steps:
       - uses: actions/checkout@v2.3.4
       - name: Login to Github
@@ -23,6 +29,61 @@ jobs:
       - name: Install Buildx
         uses: docker/setup-buildx-action@v1.6.0
       - name: Build image
+        id: build_image
+        run: |
+          # Get the arch for this build
+          ARCH=$(echo "${{ matrix.platform }}" | sed 's/\//-/g')
+
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+
+          # Strip "v" prefix from tag name
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "master" ] && VERSION=latest
+
+          IMAGE="ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$VERSION"
+
+          docker buildx build \
+            --platform linux/${{ matrix.platform }} \
+            --tag $IMAGE \
+            --build-arg BUILD_THREADS=3 \
+            --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
+            --output type=docker \
+            .
+
+            docker push $IMAGE
+            digest=$(docker inspect --format='{{index .RepoDigests 0}}' $IMAGE)
+            echo "digest: $digest"
+
+            echo $digest > $IMAGE_NAME-$VERSION-$ARCH.digest
+
+            echo "::set-output name=digest::${digest}"
+            echo "::set-output name=version::${VERSION}"
+            echo "::set-output name=arch::${ARCH}"
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: ${{ env.IMAGE_NAME }}-${{ steps.build_image.outputs.version }}-${{ steps.build_image.outputs.arch }}
+          path: ${{ env.IMAGE_NAME }}-${{ steps.build_image.outputs.version }}-${{ steps.build_image.outputs.arch }}.digest
+          if-no-files-found: error
+          retention-days: 1
+  manifest:
+    name: Manifest
+    needs: [ build ]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.3.4
+      - name: Login to Github
+        uses: docker/login-action@v1.10.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_PAT }}
+      - name: Download Artifacts
+        uses: actions/download-artifact@v2
+      - name: Build and push manifest
         run: |
           # Strip git ref prefix from version
           VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
@@ -33,9 +94,13 @@ jobs:
           # Use Docker `latest` tag convention
           [ "$VERSION" == "master" ] && VERSION=latest
 
-          docker buildx build \
-            --platform $PLATFORMS \
-            --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$VERSION \
-            --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
-            --push \
-            .
+          IMAGE="ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$VERSION"
+
+          for arch in $(echo $PLATFORMS | sed 's/\//-/g'); do
+            digest=$(cat ./$IMAGE_NAME-$VERSION-$arch/$IMAGE_NAME-$VERSION-$arch.digest)
+            amend="${amend}${digest} "
+          done
+
+          echo "docker manifest create $IMAGE $amend"
+          docker manifest create $IMAGE $amend
+          docker manifest push $IMAGE
