--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,7 @@ on: [workflow_dispatch, push]
 
 env:
   IMAGE_NAME: monero
-  PLATFORMS: amd64 arm64/v8 arm/v7
+  PLATFORMS: linux/amd64,linux/arm64
 
 jobs:
   build:
@@ -13,99 +13,57 @@ jobs:
     strategy:
       matrix:
         include:
-          - platform: amd64
-          - platform: arm64/v8
-          - platform: arm/v7
+          - arch: amd64
+          - arch: arm64
     steps:
       - uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Install Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Build Builder
-        id: build
-        run: |
-          # Get the arch for this build
-          ARCH=$(echo "${{ matrix.platform }}" | sed 's/\//-/g')
-
-          # Strip git ref prefix from version
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
-
-          docker buildx build \
-            --platform linux/${{ matrix.platform }} \
-            --build-arg BUILD_THREADS=3 \
-            --cache-to type=local,dest=${IMAGE_NAME}-${VERSION}-${ARCH} \
-            .
-
-          echo "::set-output name=version::${VERSION}"
-          echo "::set-output name=arch::${ARCH}"
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v3
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
+      - name: Build
+        uses: docker/build-push-action@v3
         with:
-          name: ${{ env.IMAGE_NAME }}-${{ steps.build.outputs.version }}-${{ steps.build.outputs.arch }}
-          path: ${{ env.IMAGE_NAME }}-${{ steps.build.outputs.version }}-${{ steps.build.outputs.arch }}
-          if-no-files-found: error
-          retention-days: 1
+          platforms: linux/${{ matrix.arch }}
+          push: false
+          build-args: BUILD_THREADS=3
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          context: .
   package:
     name: Package
-    needs: [ build ]
+    needs: [build]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Login to Github
-        uses: docker/login-action@v2
+      - uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
-      - name: Login to Quay
-        uses: docker/login-action@v2
-        with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}
-      - name: Login to Dockerhub
-        uses: docker/login-action@v2
+      - uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Install Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Download Artifacts
-        uses: actions/download-artifact@v3
-      - name: Package and push Runner
-        run: |
-          # Strip git ref prefix from version
-          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
-
-          # Strip "v" prefix from tag name
-          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
-
-          # Use Docker `latest` tag convention
-          [ "$VERSION" == "master" ] && VERSION=latest
-
-          for arch in $PLATFORMS; do
-            platforms="${platforms} --platform linux/${arch}"
-            cache="${cache} --cache-from type=local,src=./$IMAGE_NAME-$VERSION-$(echo $arch | sed 's/\//-/g')"
-          done
-
-          quay_user="$(echo ${{ secrets.QUAY_USERNAME }} | cut -f1 -d'+')"
-
-          build="docker buildx build ${platforms} \
-            --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$VERSION \
-            --tag quay.io/${quay_user}/$IMAGE_NAME:$VERSION \
-            --tag docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$VERSION \
-            --build-arg BUILD_THREADS=3 \
-            --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
-            $cache --push ."
-
-          echo "$build"
-          $build
+      - uses: docker/setup-qemu-action@v2
+      - uses: docker/setup-buildx-action@v2
+      - uses: docker/metadata-action@v4
+        id: meta
+        with:
+          images: |
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}
+            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
+      - name: Package and Push
+        uses: docker/build-push-action@v3
+        with:
+          platforms: ${{ env.PLATFORMS }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          push: true
+          build-args: BUILD_THREADS=3
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+          context: .
