--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,7 @@ on: [workflow_dispatch, push]
 
 env:
   IMAGE_NAME: monero
-  PLATFORMS: amd64 arm64/v8 arm/v7
+  PLATFORMS: amd64 arm64/v8
 
 jobs:
   build:
@@ -15,13 +15,23 @@ jobs:
         include:
           - platform: amd64
           - platform: arm64/v8
-          - platform: arm/v7
     steps:
       - uses: actions/checkout@v3
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Install Buildx
         uses: docker/setup-buildx-action@v2
+      - name: Login to Github
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_PAT }}
+      - name: Login to Dockerhub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Build Builder
         id: build
         run: |
@@ -41,6 +51,9 @@ jobs:
             --platform linux/${{ matrix.platform }} \
             --build-arg BUILD_THREADS=3 \
             --cache-to type=local,dest=${IMAGE_NAME}-${VERSION}-${ARCH} \
+            --tag ghcr.io/${{ github.repository_owner }}/${IMAGE_NAME}:${VERSION}-${ARCH} \
+            --tag docker.io/${{ secrets.DOCKERHUB_USERNAME }}/${IMAGE_NAME}:${VERSION}-${ARCH} \
+            --push \
             .
 
           echo "::set-output name=version::${VERSION}"
@@ -64,12 +77,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GHCR_PAT }}
-      - name: Login to Quay
-        uses: docker/login-action@v2
-        with:
-          registry: quay.io
-          username: ${{ secrets.QUAY_USERNAME }}
-          password: ${{ secrets.QUAY_PASSWORD }}
       - name: Login to Dockerhub
         uses: docker/login-action@v2
         with:
@@ -97,11 +104,8 @@ jobs:
             cache="${cache} --cache-from type=local,src=./$IMAGE_NAME-$VERSION-$(echo $arch | sed 's/\//-/g')"
           done
 
-          quay_user="$(echo ${{ secrets.QUAY_USERNAME }} | cut -f1 -d'+')"
-
           build="docker buildx build ${platforms} \
             --tag ghcr.io/${{ github.repository_owner }}/$IMAGE_NAME:$VERSION \
-            --tag quay.io/${quay_user}/$IMAGE_NAME:$VERSION \
             --tag docker.io/${{ secrets.DOCKERHUB_USERNAME }}/$IMAGE_NAME:$VERSION \
             --build-arg BUILD_THREADS=3 \
             --label org.opencontainers.image.source=https://github.com/${{ github.repository }} \
