--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,7 @@ on: [workflow_dispatch, push]
 
 env:
   IMAGE_NAME: monero
-  PLATFORMS: amd64 arm64/v8
+  PLATFORMS: amd64 arm64/v8 arm/v7
 
 jobs:
   build:
@@ -15,6 +15,7 @@ jobs:
         include:
           - platform: amd64
           - platform: arm64/v8
+          - platform: arm/v7
     steps:
       - uses: actions/checkout@v3
       - name: Set up QEMU
