--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,6 +31,7 @@ jobs:
             docker.io/rblaine/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
+            type=raw,value={{branch}},enable=${{ github.ref != format('refs/heads/{0}', 'master') }}
             type=semver,pattern={{version}}
       - uses: docker/build-push-action@v4
         with:
