--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,7 +32,7 @@ jobs:
           tags: |
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'master') }}
             type=raw,value={{branch}},enable=${{ github.ref != format('refs/heads/{0}', 'master') }}
-            type=semver,pattern={{version}}
+            type=ref,event=tag
       - uses: docker/build-push-action@v4
         with:
           platforms: ${{ env.PLATFORMS }}
