--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,31 @@ services:
   watchtower:
     container_name: watchtower
     image: containrrr/watchtower
+    restart: unless-stopped
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+
+  autoheal:
+    container_name: autoheal
+    image: willfarrell/autoheal
+    restart: unless-stopped
+    environment:
+      AUTOHEAL_CONTAINER_LABEL: all
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
   monerod:
     container_name: monerod
     image: ghcr.io/rblaine95/monero:0.18.3.4-2
+    restart: unless-stopped
     network_mode: host
     volumes:
       - ./monero-data:/opt/bitmonero
     command:
+      # https://getmonero.dev/interacting/monerod
       - --non-interactive
       - --no-igd
+      - --no-zmq
       - --confirm-external-bind
       - --rpc-restricted-bind-port=18089
       - --rpc-restricted-bind-ip=0.0.0.0
@@ -23,6 +36,18 @@ services:
       - --pad-transactions
       - --proxy=127.0.0.1:9050
       - --tx-proxy=tor,127.0.0.1:9050,16
+      - --add-priority-node=xwvz3ekocr3dkyxfkmgm2hvbpzx2ysqmaxgter7znnqrhoicygkfswid.onion:18083
+      - --add-priority-node=4pixvbejrvihnkxmduo2agsnmc3rrulrqc7s3cbwwrep6h6hrzsibeqd.onion:18083
+      - --add-priority-node=zbjkbsxc5munw3qusl7j2hpcmikhqocdf4pqhnhtpzw5nt5jrmofptid.onion:18083
+      - --add-priority-node=plowsof3t5hogddwabaeiyrno25efmzfxyro2vligremt7sxpsclfaid.onion:18083
+      - --add-priority-node=plowsoffjexmxalw73tkjmf422gq6575fc7vicuu4javzn2ynnte6tyd.onion:18083
+      - --add-priority-node=qz43zul2x56jexzoqgkx2trzwcfnr6l3hbtfcfx54g4r3eahy3bssjyd.onion:18083
+      - --add-peer=xwvz3ekocr3dkyxfkmgm2hvbpzx2ysqmaxgter7znnqrhoicygkfswid.onion:18083
+      - --add-peer=4pixvbejrvihnkxmduo2agsnmc3rrulrqc7s3cbwwrep6h6hrzsibeqd.onion:18083
+      - --add-peer=zbjkbsxc5munw3qusl7j2hpcmikhqocdf4pqhnhtpzw5nt5jrmofptid.onion:18083
+      - --add-peer=plowsof3t5hogddwabaeiyrno25efmzfxyro2vligremt7sxpsclfaid.onion:18083
+      - --add-peer=plowsoffjexmxalw73tkjmf422gq6575fc7vicuu4javzn2ynnte6tyd.onion:18083
+      - --add-peer=qz43zul2x56jexzoqgkx2trzwcfnr6l3hbtfcfx54g4r3eahy3bssjyd.onion:18083
 
   prep-tor-data:
     container_name: prep-volume
@@ -39,6 +64,7 @@ services:
   tor:
     container_name: tor
     image: ghcr.io/rblaine95/tor
+    restart: unless-stopped
     volumes:
       - ./tor-data:/var/lib/tor
     network_mode: host
