--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,18 +18,15 @@ jobs:
             runs-on: ubuntu-latest
             platform: linux/amd64
           - arch: arm64
-            runs-on: ubuntu-latest
+            # https://github.blog/changelog/2025-01-16-linux-arm64-hosted-runners-now-available-for-free-in-public-repositories-public-preview/
+            runs-on: ubuntu-24.04-arm
             platform: linux/arm64
-            # One day, when ARM based Github Hosted Runners are GA...
-            # https://github.com/github/roadmap/issues/970
-            # runs-on: ubuntu-latest-arm64
           - arch: armv7
             runs-on: ubuntu-latest
             platform: linux/arm/v7
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
-        if: ${{ matrix.arch != 'amd64' }}
       - uses: docker/setup-buildx-action@v3
       - uses: docker/build-push-action@v6
         with:
