--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -42,6 +42,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
+        with:
+          cache-binary: false
+          install: true
+          version: latest
       - uses: docker/build-push-action@v6
         with:
           platforms: ${{ matrix.platform }}
@@ -74,6 +78,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
+        with:
+          cache-binary: false
+          install: true
+          version: latest
       - uses: docker/build-push-action@v6
         with:
           platforms: ${{ matrix.platform }}
@@ -96,6 +104,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
+        with:
+          cache-binary: false
+          install: true
+          version: latest
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -141,6 +153,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: docker/setup-qemu-action@v3
       - uses: docker/setup-buildx-action@v3
+        with:
+          cache-binary: false
+          install: true
+          version: latest
       - uses: docker/login-action@v3
         with:
           registry: ghcr.io
